# gamelab3-ocean_outlaws

./: .gitmodules  LICENSE  README.md
code/: .gitignore  CMakeLists.txt
code/assets/audio/: credits.txt
code/assets/images/ui/: Credits.txt
code/assets/shaders/: fragmentShader.frag  spriteFragmentShader.frag  spriteVertexShader.vert  uiVertexShader.vert  vertexShader.vert
code/engine/: CMakeLists.txt
code/engine/include/: EisEngine.h
code/engine/include/OpenGL/: OpenGlInclude.h
code/engine/include/engine/: Components.h  Context.h  Events.h  Game.h  ResourceManager.h  Systems.h  Utilities.h
code/engine/src/: Context.cpp  Game.cpp  ResourceManager.cpp
code/engine/src/components/: BoxCollider2D.cpp  PhysicsBody2D.cpp  Script.cpp  Transform.cpp
code/engine/src/ecs/: Component.cpp  ComponentManager.cpp  Entity.cpp  EntityManager.cpp
code/engine/src/systems/: Camera.cpp  ContactListener.cpp  Input.cpp  PhysicsSystem.cpp  PhysicsUpdater.cpp  RenderingSystem.cpp  SceneGraphPruner.cpp  SceneGraphUpdater.cpp  Time.cpp
code/engine/src/utilities/: Bounds2D.cpp  Color.cpp  DebugLine.cpp  Math.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp
code/game/: CMakeLists.txt
code/game/src/: Enums.h  GameObject.cpp  GameObject.h  GeneralControls.h  OceanOutlaws.cpp  OceanOutlaws.h  main.cpp
code/game/src/EnemyAI/: CheckForCollisions.cpp  CheckForCollisions.h  CheckPlayerInFiringRange.cpp  CheckPlayerInFiringRange.h  CheckPlayerNode.cpp  CheckPlayerNode.h  Pathfinding.cpp  Pathfinding.h  TaskAvoidCollisions.cpp  TaskAvoidCollisions.h  TaskFireAtPlayer.cpp  TaskFireAtPlayer.h  TaskNavigateToPlayer.cpp  TaskNavigateToPlayer.h
code/game/src/GameObjects/: Barrel.cpp  Barrel.h  Cannon.cpp  Cannon.h  Cannonball.cpp  Cannonball.h  EndScreen.h  EnemyShip.cpp  EnemyShip.h  GameManagerObject.cpp  GameManagerObject.h  MainMenu.h  MapTile.cpp  MapTile.h  PlayerShip.cpp  PlayerShip.h  Ship.cpp  Ship.h
code/game/src/MapGeneration/: NodeData.h  SeaGraphEdge.cpp  SeaGraphEdge.h  SeaNode.cpp  SeaNode.h  SeaNodeGraph.cpp  SeaNodeGraph.h
code/game/src/Scripts/: AudioManager.cpp  AudioManager.h  EnemyController.cpp  EnemyController.h  GameManager.cpp  GameManager.h  MapGenerator.cpp  MapGenerator.h  PlayerController.cpp  PlayerController.h  Wind.cpp  Wind.h
(+72 files in other folders)
